[package]
name = "ldap_test"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
ldap3 = "0.11.5"
native-tls = "0.2.12"
rand = "0.8.5"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha1 = "0.10.6"
